package com.trello.identity.enums;

public enum OtpPurpose {
    ACCOUNT_CONFIRMATION,
    PASSWORD_RESET
}
